--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primaryColor: #006400;
 }
 
 /* @media (prefers-color-scheme: dark) {
