--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --primaryColor: #006400;
+  --primaryColor: #006633;
+  --secondaryColor: #22c55e
 }
 
 /* @media (prefers-color-scheme: dark) {
