--- a/src/styles/Footer.module.css
+++ b/src/styles/Footer.module.css
@@ -1,5 +1,5 @@
 .footer {
-  background-color: var(--primaryColor);
+  background-color: black;
   color: white;
   text-align: center; /* stay centered always */
   padding: 2rem 0rem;
