--- a/src/styles/Contact.module.css
+++ b/src/styles/Contact.module.css
@@ -38,7 +38,7 @@
   /* Left Info Panel */
   .contactInfo {
     flex: 1 1 350px;
-    background-color: var(--secondaryColor); /* Dark green */
+    background-color: var(--secondaryColor); 
     color: white;
     padding: 2rem;
     display: flex;
@@ -121,7 +121,7 @@
   
   .inputGroup input:focus,
   .inputGroup textarea:focus {
-    border-color: #006400;
+    border-color: var(--secondaryColor);
   }
   
   .inputGroup textarea {
@@ -130,7 +130,7 @@
   }
   
   .submitBtn {
-    background-color: #006400;
+    background-color: var(--secondaryColor);
     color: white;
     border: none;
     padding: 0.9rem 1.5rem;
@@ -142,7 +142,7 @@
   }
   
   .submitBtn:hover {
-    background-color: #004d00;
+    /* background-color: #004d00; */
     transform: translateY(-2px);
   }
   
